--- a/style.css
+++ b/style.css
@@ -529,6 +529,15 @@ a {
   width: 100%;
 }
 
+.kthuoc {
+  position: absolute;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 10px 0;
+  bottom: 60px;
+  font-weight: bold;
+}
 .img_container_catalog {
   width: 100%;
   height: 290px;
@@ -537,6 +546,7 @@ a {
 }
 
 .product-inf {
+  position: relative;
   text-align: center;
   overflow-y: hidden;
   cursor: pointer;
@@ -698,6 +708,11 @@ a {
     margin-top: 50px;
     width: 100%;
   }
+
+  .kthuoc {
+    font-size: 12px;
+    font-weight: normal;
+  }
   .img_container_catalog {
     width: 100%;
     height: 170px;
@@ -825,7 +840,9 @@ a {
   .wrapper > .menu-background {
     display: none;
   }
+
   .product-inf > span {
-    font-size:15px;
+    font-size: 15px;
   }
 }
+
