--- a/style.css
+++ b/style.css
@@ -792,7 +792,7 @@ a {
         /*230px;*/
         background-color: gainsboro;
         padding: 5px 0;
-        transition: all 1s ease;
+        transition: left 1s ease;
         border-bottom-right-radius: 8px;
         border-top-right-radius: 8px;
     }
