--- a/style.css
+++ b/style.css
@@ -544,8 +544,8 @@ a {
 
 .search {
     width: 100%;
-    padding: 1em;
     display: flex;
+    margin-top: 30px;
     justify-content: center;
 }
 
