--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .body {
-    font-family: sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     width: 100vw;
     max-width: 100%;
     overflow-y: hidden;
@@ -13,7 +13,7 @@ a {
 }
 
 .wrapper {
-    font-family: sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     position: absolute;
     left: 0;
     top: 0;
