change mid quote Bg

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ a {
     grid-template-columns: 0.5fr minmax(460px, 560px) minmax(365px, 1fr);
     justify-content: space-evenly;
     border-bottom: 1px solid;
-    background-color: rgba(0, 0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 .homeheader>a {
@@ -315,7 +315,7 @@ a {
 .mid-quote-img {
     position: absolute;
     z-index: 0;
-    bottom: 0;
+    bottom: 0px;
     left: 0;
     width: 100vw;
     height: auto;
