--- a/CV Online/style.scss
+++ b/CV Online/style.scss
@@ -31,6 +31,9 @@ body {
       font-weight: bold;
     }
   }
+  .links a::before {
+    content: '• ';
+  }
 
   ul {
     padding: 0;
@@ -45,10 +48,12 @@ body {
   }
   .resume {
     .row {
-      margin-bottom: 2rem;
+      margin-bottom: 1.3rem;
       .col-3 {
         color: grey;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+        font-style: italic;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
       }
     }
   }
@@ -63,18 +68,44 @@ body {
         position: absolute;
         opacity: 0%;
         height: 100%;
-        width: 100% ;
+        width: 100%;
         padding: 3rem;
-        font-size: 0.8rem;
+        font-size: 1rem;
         color: aliceblue;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        
       }
       &:hover .card-body {
         opacity: 100%;
         background-color: rgba(0, 0, 0, 0.8);
+      }
+    }
+  }
+}
+
+@media (max-width: 650px) {
+  body {
+    .name-title {
+      *{
+      font-size: 1rem;
+    }}
+    h1,h2,h3,h4,h5 {
+      font-size: 1.1rem;
+    }
+    font-size: 0.7rem;
+    .container {
+      padding: 0;
+    }
+    .wrapper {
+      padding: 1rem 1rem;
+    }
+    .portfolio {
+      .card {
+        .card-body {
+          font-size: 0.7rem;
+          padding: 1rem;
+        }
       }
     }
   }
